--- a/package.json
+++ b/package.json
@@ -11,24 +11,23 @@
   "license": "ISC",
   "devDependencies": {
     "babel-eslint": "^6.0.4",
-    "chai": "^3.5.0",
-    "csslint": "^0.10.0",
-    "eslint": "^2.11.1",
+    "chai": "^4.2.0",
+    "csslint": "^1.0.5",
+    "eslint": "^6.0.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
-    "mocha": "^2.5.3",
-    "supertest": "^1.2.0"
+    "mocha": "^6.1.4",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
-    "body-parser": "^1.15.1",
-    "ejs": "^2.4.2",
-    "express": "^4.13.4",
-    "express-ejs-layouts": "^2.1.0",
-    "morgan": "^1.7.0",
-    "pg": "^5.0.0",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^3.23.3"
+    "dotenv": "^8.0.0",
+    "ejs": "^2.6.2",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "morgan": "^1.9.1",
+    "pg": "^7.11.0",
+    "sequelize": "^5.8.12"
   }
 }
