--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
   "name": "express-authentication",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node index.js",
-    "lint:js": "node_modules/eslint/bin/eslint.js ./ ./**/*.js --fix; exit 0",
-    "lint:css": "node_modules/csslint/cli.js public/css/; exit 0",
     "test": "NODE_ENV=test node_modules/mocha/bin/mocha"
   },
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "^6.0.4",
     "chai": "^4.2.0",
-    "csslint": "^1.0.5",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.3.0",
-    "eslint-plugin-react": "^5.1.1",
     "mocha": "^6.1.4",
     "supertest": "^4.0.2"
   },
