creating user model

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "bcrypt": "^4.0.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
