--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
     "dialect": "postgres"
   },
   "test": {
-    "database": "express_auth_test",
+    "database": "express_auth_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
