--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.0",
     "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^7.11.0",
     "sequelize": "^5.8.12"
   }
