--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^4.0.0",
     "connect-flash": "^0.1.1",
+    "connect-session-sequelize": "^6.1.1",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
